# custom-resume-according-to-job-description

./: .gitignore  README.md  app.py  main.py  pyproject.toml  requirements.txt  routes.py
data/: experience.json  generated_content.json  skills.json
services/: latex_builder_service.py  ollama_generator_service.py  resume_matcher_service.py  supabase_service.py
templates/: resume_template.tex
