[project]
name = "resume-autobot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "annotated-doc==0.0.4",
    "annotated-types==0.7.0",
    "anyio==4.12.1",
    "blis==1.3.3",
    "catalogue==2.0.10",
    "certifi==2026.2.25",
    "charset-normalizer==3.4.4",
    "click==8.3.1",
    "cloudpathlib==0.23.0",
    "confection==0.1.5",
    "cymem==2.0.13",
    "en-core-web-md",
    "fastapi>=0.135.1",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "idna==3.11",
    "jinja2==3.1.6",
    "markdown-it-py==4.0.0",
    "markupsafe==3.0.3",
    "mdurl==0.1.2",
    "murmurhash==1.0.15",
    "numpy==2.4.2",
    "ollama==0.6.1",
    "packaging==26.0",
    "preshed==3.0.12",
    "pydantic==2.12.5",
    "pydantic-core==2.41.5",
    "pygments==2.19.2",
    "python-dotenv>=1.2.2",
    "requests==2.32.5",
    "rich==14.3.3",
    "setuptools==82.0.0",
    "shellingham==1.5.4",
    "smart-open==7.5.1",
    "spacy==3.8.11",
    "spacy-legacy==3.0.12",
    "spacy-loggers==1.0.5",
    "srsly==2.5.2",
    "supabase>=2.28.0",
    "thinc==8.3.10",
    "tqdm==4.67.3",
    "typer==0.24.1",
    "typer-slim==0.24.0",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "urllib3==2.6.3",
    "uvicorn>=0.41.0",
    "wasabi==1.1.3",
    "weasel==0.4.3",
    "wrapt==2.1.1",
]

[tool.uv.sources]
en-core-web-md = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_md-3.8.0/en_core_web_md-3.8.0-py3-none-any.whl" }
